@@ -11,3 +11,15 @@ max_connections=1024
 
 tracker_server=10.62.245.107:22122
 tracker_server=10.62.164.84:22122
+
+#standard log level as syslog, case insensitive, value list:
+### emerg for emergency
+### alert
+### crit for critical
+### error
+### warn for warning
+### notice
+### info
+### debug
+log_level=info
+
