@@ -146,6 +146,12 @@ int tracker_load_from_conf_file(const char *filename, \
 			break;
 		}
 
+		fdfs_load_log_level(items, nItemCount);
+		if ((result=log_init(TRACKER_ERROR_LOG_FILENAME)) != 0)
+		{
+			break;
+		}
+
 		g_network_timeout = iniGetIntValue("network_timeout", \
 				items, nItemCount, DEFAULT_NETWORK_TIMEOUT);
 		if (g_network_timeout <= 0)
@@ -232,8 +238,7 @@ int tracker_load_from_conf_file(const char *filename, \
 			break;
 		}
 	
-		logInfo(TRACKER_ERROR_LOG_FILENAME, \
-			"FastDFS v%d.%d, base_path=%s, " \
+		logInfo("FastDFS v%d.%d, base_path=%s, " \
 			"network_timeout=%d, "    \
 			"port=%d, bind_addr=%s, " \
 			"max_connections=%d, "    \
